Disable EV3 drivers

--- a/arch/arm/configs/bcmrpi_defconfig
+++ b/arch/arm/configs/bcmrpi_defconfig
@@ -406,6 +406,7 @@ CONFIG_RFKILL_INPUT=y
 CONFIG_NET_9P=m
 CONFIG_NFC=m
 CONFIG_LEGO_DRIVERS=m
+# CONFIG_LEGOEV3_DRIVERS is not set
 CONFIG_WEDO=m
 CONFIG_BRICKPI=m
 CONFIG_BRICKPI_BATTERY=m
