update rpi2 defconfig

--- a/arch/arm/configs/bcm2709_defconfig
+++ b/arch/arm/configs/bcm2709_defconfig
@@ -409,6 +409,7 @@ CONFIG_RFKILL_INPUT=y
 CONFIG_NET_9P=m
 CONFIG_NFC=m
 CONFIG_LEGO_DRIVERS=m
+# CONFIG_LEGOEV3_DRIVERS is not set
 CONFIG_WEDO=m
 CONFIG_BRICKPI=m
 CONFIG_BRICKPI_BATTERY=m
@@ -666,8 +667,8 @@ CONFIG_POWER_RESET_GPIO=y
 CONFIG_BATTERY_DS2760=m
 CONFIG_HWMON=m
 CONFIG_SENSORS_JC42=m
-CONFIG_SENSORS_LM75=m
 CONFIG_SENSORS_MCP3021=m
+CONFIG_SENSORS_LM75=m
 CONFIG_SENSORS_SHT21=m
 CONFIG_SENSORS_SHTC1=m
 CONFIG_SENSORS_ADS1015=m
